--- a/src/components/MovieDetails/MovieDetails.scss
+++ b/src/components/MovieDetails/MovieDetails.scss
@@ -1,3 +1,5 @@
+@import '../../App.scss';
+
 .header-contents__text {
   color: white;
 }
@@ -16,18 +18,61 @@
 }
 
 .movie-details__left {
-  display: flex;
-  flex-wrap: nowrap;
   width: calc(85% - 24px);
   margin: 12px;
+}
+
+.actors-list {
+  display: flex;
+  flex-wrap: nowrap;
   overflow-y: hidden;
   overflow-x: scroll;
+  position: relative;
+  list-style-type: none;
+  list-style-position: inside;
+  top: 0;
+  left: 0;
+  padding: 0;
+
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+}
+
+.movie-details__right {
+  width: calc(15% - 24px);
+  margin: 12px;
+}
+
+.actors-container {
+  padding: 30px 0;
 }
 
 .actors-card {
   list-style: none;
+  border: 1px solid $--lightGrey;
+  padding-bottom: 10px;
+  border-radius: $--imageBorderRadius;
+  box-shadow: #d8d8d8 0 2px 8px 0px;
+  overflow: hidden;
+  min-width: 140px;
+  width: 140px;
+
+  margin: 10px 10px 10px 4px;
 }
 
 .actor-image {
-  width: 120px;
+  width: 100%
 }
+
+.social-link__list {
+  display: flex;
+  width: 100%;
+  padding: 0;
+  justify-content: space-between;
+}
+
+.social-link__item {
+  list-style: none;
+}
+
