--- a/src/components/MovieDetails/MovieDetails.scss
+++ b/src/components/MovieDetails/MovieDetails.scss
@@ -26,7 +26,7 @@
 .movie-details__container {
   width: 100%;
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 30px auto;
   display: flex;
 }
 
@@ -58,7 +58,7 @@
 }
 
 .actors-container {
-  padding: 0 0 30px;
+  padding: 15px 0 30px;
 }
 
 .actors-card {
@@ -87,5 +87,24 @@
 
 .social-link__item {
   list-style: none;
+
+  &.homepage {
+    padding-left: 10px;
+    border-left: solid 1px rgba(0, 0, 0, 0.13);
+  }
 }
 
+.status {
+  margin: 0 0 20px 0;
+
+  & strong {
+    display: block;
+  }
+}
+
+.user-score {
+  font-weight: 700;
+  margin-left: 6px;
+  white-space: pre-line;
+  align-self: center;
+}
