--- a/src/components/MovieDetails/MovieDetails.scss
+++ b/src/components/MovieDetails/MovieDetails.scss
@@ -108,3 +108,9 @@
   white-space: pre-line;
   align-self: center;
 }
+
+.reviews-content {
+  border: solid 1px rgba(0, 0, 0, 0.13);
+  padding: 15px;
+  border-radius: $--imageBorderRadius;
+}
