--- a/src/components/MovieDetails/MovieDetails.scss
+++ b/src/components/MovieDetails/MovieDetails.scss
@@ -20,7 +20,7 @@
 .header-contents__container {
   width: 1280px;
   display: flex;
-  padding: 30px 40px;
+  padding: 30px 17px;
 }
 
 .movie-details__container {
@@ -45,11 +45,7 @@
   list-style-position: inside;
   top: 0;
   left: 0;
-  padding: 0;
-
-  &::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  }
+  padding: 0 0 10px 0;
 }
 
 .movie-details__right {
@@ -59,6 +55,36 @@
 
 .actors-container {
   padding: 15px 0 30px;
+  position: relative;
+
+  &::after {
+    content: '';
+    width: 60px;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-image: linear-gradient(to right, rgba(255,255,255,0) 0%, #fff 100%);
+    will-change: opacity;
+    pointer-events: none;
+  }
+
+  /* width */
+  ::-webkit-scrollbar {
+    height: 8px;
+    width: 8px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    display: none;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(219,219,219);
+    border-radius: 20px;
+  }
 }
 
 .actors-card {
@@ -70,7 +96,6 @@
   overflow: hidden;
   min-width: 140px;
   width: 140px;
-
   margin: 10px 10px 10px 4px;
 }
 
@@ -113,4 +138,5 @@
   border: solid 1px rgba(0, 0, 0, 0.13);
   padding: 15px;
   border-radius: $--imageBorderRadius;
+  margin: 20px 0;
 }
