added styles on search page

--- a/src/components/MovieList/MovieList.scss
+++ b/src/components/MovieList/MovieList.scss
@@ -1,6 +1,6 @@
 @import '../../App.scss';
 
-.movielist-container {
+.movielist-container, .searchpage-container {
   width: 100%;
   position: relative;
   margin: 0 auto;
